[gd_scene load_steps=2 format=3 uid="uid://dmatmgn1d2d82"]

[ext_resource type="Script" path="res://menus/pause_menu.gd" id="1_n40iw"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n40iw")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.733333)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_bottom = 25

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 30
text = "Game Paused"

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/RestartButton" to="." method="_on_quit_button_pressed"]
